--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,13 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.36.8",
+    "@number-flow/react": "^0.5.10",
     "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@types/canvas-confetti": "^1.9.0",
+    "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.27.1",
